--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,16 @@
   height: 250px;
   object-fit: cover;
 }
+.language-proramming {
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  background-color: #ececec;
+}
+.language-proramming span {
+  color: rgb(252, 50, 84);
+}
 @media (max-width: 600px) {
   .box-portfolio {
     width: 100%;
