--- a/css/style.css
+++ b/css/style.css
@@ -198,9 +198,8 @@
   font-weight: bold;
 }
 .form-portfolio {
-  /* background-color: #f2f2f2; */
+  background-color: #f2f2f2;
   padding: 15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin-top: 10px;
 }
 .row-portfolio {
@@ -210,6 +209,7 @@
   width: calc(33% - 10px);
   float: left;
   margin: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 .box-portfolio img {
   width: 100%;
@@ -218,8 +218,8 @@
 }
 .language-proramming {
   width: 100%;
-  height: 50px;
-  line-height: 50px;
+  height: 30px;
+  line-height: 30px;
   text-align: center;
   background-color: #ececec;
 }
