--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,10 @@
 .banner-text {
   padding: 60px 0;
   text-align: center;
-  background-color: #f1f1f1;
+  background-color: lightskyblue;
 }
 .color-name {
-  color: blue;
+  color: deeppink;
   font-weight: bold;
 }
 .image {
