--- a/css/style.css
+++ b/css/style.css
@@ -210,11 +210,41 @@
   float: left;
   margin: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  position: relative;
 }
 .box-portfolio img {
   width: 100%;
   height: 250px;
   object-fit: cover;
+  opacity: 1;
+  transition: 0.5s ease;
+}
+.detail-portfolio {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+.detail-portfolio button {
+  width: 100px;
+  height: 40px;
+  border: none;
+  background-color: #f80;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 20px;
+}
+.box-portfolio:hover img {
+  opacity: 0.3;
+}
+
+.box-portfolio:hover .detail-portfolio {
+  opacity: 1;
 }
 .language-proramming {
   width: 100%;
